hopefully fixed project alignment

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ figure {
     overflow: hidden;
     min-width: 300px;
     max-width: 500px;
-    max-height: 500px;;
+    max-height: 500px;
     width: 100%;
     background: white;
     text-align: center;
